--- a/15-LocalStorage/index.html
+++ b/15-LocalStorage/index.html
@@ -32,7 +32,53 @@
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items =  JSON.parse(localStorage.getItem('items')) || [];
+
+  addItems.addEventListener('submit', addItem);
+  itemsList.addEventListener('click', toggleDone);
+
+  populateList(items, itemsList);
+
+  function addItem(e) {
+    e.preventDefault();
+
+    // Get first element of Array
+    const [ input ] = e.target.elements;
+    const text = input.value;
+    // or we could do
+    // const text = (this.querySelector('[name=item]')).value;
+
+    const item = {
+      text,
+      done: false,
+    }
+
+    items.push(item);
+    populateList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
+    // Reset input form (this refers to addItems form).
+    this.reset();
+  }
+
+  function toggleDone(e) {
+    if (!e.target.matches('input')) return;
+
+    const index = e.target.dataset.index;
+    items[index].done = !items[index].done;
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items, itemsList);
+  }
+
+  function populateList(plates = [], platesList) {
+    platesList.innerHTML = plates.map(({ text, done }, i) => {
+      return `
+        <li>
+          <input type="checkbox" data-index=${i} id="item${i}" ${done === true ? 'checked' : ''} />
+          <label for="item${i}">${text}</label>
+        </li>
+      `;
+    }).join('');
+  }
 
 </script>
 
