--- a/15-LocalStorage/index.html
+++ b/15-LocalStorage/index.html
@@ -30,16 +30,10 @@
 
     <div class="controlsList">
       <button data-type="clear" >Clear all</button>
-      <button data-type="check" >Check/Unckeck</button>
+      <button data-type="check" >Check all</button>
       <button data-type="unCheck" >Unckeck all</button>
     </div>
   </div>
-
-
-
-
-
-
 
 <script>
   const addItems = document.querySelector('.add-items');
@@ -120,7 +114,6 @@
         return
     }
   }
-
 </script>
 
 
