--- a/10-HoldShiftCheckboxes/index-START.html
+++ b/10-HoldShiftCheckboxes/index-START.html
@@ -99,6 +99,28 @@
   </div>
 
 <script>
+  const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
+  let lastChecked;
+
+  checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
+
+  function handleCheck(e) {
+    let inBetween = false;
+
+    if (e.shiftKey && e.target.checked) {
+      checkboxes.forEach(checkbox => {
+        if (checkbox === e.target || checkbox === lastChecked) {
+          inBetween = !inBetween;
+        }
+
+        if (inBetween) {
+          checkbox.checked = true;
+        }
+      })
+    }
+
+    lastChecked = e.target;
+  }
 </script>
 </body>
 </html>
