--- a/3-CssVariables/index.html
+++ b/3-CssVariables/index.html
@@ -9,10 +9,10 @@
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
-    <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
+    <input id="spacing" type="range" name="spacing" min="10" max="200" value="50" data-sizing="px">
 
     <label for="blur">Blur:</label>
-    <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
+    <input id="blur" type="range" name="blur" min="0" max="25" value="3" data-sizing="px">
 
     <label for="base">Base Color</label>
     <input id="base" type="color" name="base" value="#ffc600">
@@ -23,12 +23,12 @@
   <style>
     :root {
       --base: #ffc600;
-      --spacing: 10px;
+      --spacing: 50px;
       --blur: 3px;
     }
 
     img {
-      padding: var(--spacing);
+      padding: 10px;
       background: var(--base);
       filter: blur(var(--blur));
     }
@@ -51,7 +51,7 @@
     }
 
     .controls {
-      margin-bottom: 50px;
+      margin-bottom: var(--spacing);
     }
 
     input {
@@ -60,6 +60,16 @@
   </style>
 
   <script>
+    const inputs = document.querySelectorAll('.controls input');
+
+    function handleUpdate({ target }) {
+      const suffix = target.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${target.name}`, target.value + suffix);
+    }
+
+    inputs.forEach(input => input.addEventListener('change', handleUpdate));
+    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
+
   </script>
 
 </body>
