--- a/29-CountdownClock/index.html
+++ b/29-CountdownClock/index.html
@@ -4,90 +4,93 @@
   <meta charset="UTF-8">
   <title>Countdown Timer</title>
   <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+
   <style>
-  html {
-    box-sizing: border-box;
-    font-size: 10px;
-    background: #8E24AA;
-    background: linear-gradient(45deg,  #42a5f5 0%,#478ed1 50%,#0d47a1 100%);
-  }
+    html {
+      box-sizing: border-box;
+      font-size: 10px;
+      background: #8E24AA;
+      background: linear-gradient(45deg,  #42a5f5 0%,#478ed1 50%,#0d47a1 100%);
+    }
 
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
+    *, *:before, *:after {
+      box-sizing: inherit;
+    }
 
-  body {
-    margin:0;
-    text-align: center;
-    font-family: 'Inconsolata', monospace;
-  }
+    body {
+      margin:0;
+      text-align: center;
+      font-family: 'Inconsolata', monospace;
+    }
 
-  .display__time-left {
-    font-weight: 100;
-    font-size: 20rem;
-    margin: 0;
-    color:white;
-    text-shadow:4px 4px 0 rgba(0,0,0,0.05);
-  }
+    .timer {
+      display:flex;
+      min-height: 100vh;
+      flex-direction:column;
+    }
 
-  .timer {
-    display:flex;
-    min-height: 100vh;
-    flex-direction:column;
-  }
+    .timer__controls {
+      display: flex;
+    }
 
-  .timer__controls {
-    display: flex;
-  }
+    .timer__controls > * {
+      flex:1;
+    }
 
-  .timer__controls > * {
-    flex:1;
-  }
+    .timer__controls form {
+      flex:1;
+      display:flex;
+    }
 
-  .timer__controls form {
-    flex:1;
-    display:flex;
-  }
+    .timer__controls input {
+      flex:1;
+      border:0;
+      padding:2rem;
+    }
 
-  .timer__controls input {
-    flex:1;
-    border:0;
-    padding:2rem;
-  }
+    .timer__button {
+      background:none;
+      border:0;
+      cursor: pointer;
+      color:white;
+      font-size: 2rem;
+      text-transform: uppercase;
+      background:rgba(0,0,0,0.1);
+      border-bottom:3px solid rgba(0,0,0,0.2);
+      border-right:1px solid rgba(0,0,0,0.2);
+      padding:1rem;
+      font-family: 'Inconsolata', monospace;
+    }
 
-  .timer__button {
-    background:none;
-    border:0;
-    cursor: pointer;
-    color:white;
-    font-size: 2rem;
-    text-transform: uppercase;
-    background:rgba(0,0,0,0.1);
-    border-bottom:3px solid rgba(0,0,0,0.2);
-    border-right:1px solid rgba(0,0,0,0.2);
-    padding:1rem;
-    font-family: 'Inconsolata', monospace;
-  }
+    .timer__button:hover,
+    .timer__button:focus {
+      background:rgba(0,0,0,0.2);
+      outline:0;
+    }
 
-  .timer__button:hover,
-  .timer__button:focus {
-    background:rgba(0,0,0,0.2);
-    outline:0;
-  }
+    /* Timer */
+    .display {
+      flex:1;
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
 
-  .display {
-    flex:1;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+    .display__time-left {
+      font-weight: 100;
+      font-size: 20rem;
+      margin: 0;
+      color:white;
+      text-shadow:4px 4px 0 rgba(0,0,0,0.05);
+    }
 
-  .display__end-time {
-    font-size: 4rem;
-    color:white;
-  }
-</style>
+    .display__end-time {
+      font-size: 4rem;
+      color:white;
+    }
+  </style>
+
 </head>
 <body>
   <div class="timer">
@@ -108,7 +111,20 @@
   </div>
 
   <script>
-    
+    let countDown;
+
+    function timer(seconds) {
+      const startTime = Date.now();
+      const endTime = startTime + seconds * 1000;
+
+      countDown = setInterval(() => {
+        const timeLeft = Math.round((endTime - Date.now()) / 1000);
+
+        if (timeLeft < 0) { return clearInterval(countDown) };
+
+        console.log(timeLeft);
+      }, 1000);
+    }
   </script>
 </body>
 </html>
