--- a/6-TypeAhead/index.html
+++ b/6-TypeAhead/index.html
@@ -79,7 +79,7 @@
     font-size: 15px;
   }
 
-  .hl {
+  .h1 {
     background:#ffc600;
   }
 </style>
@@ -118,9 +118,13 @@
     function displayMatches({ target }) {
       const matchArray = findMatches(target.value, cities);
       const html = matchArray.map(place => {
+        const regex = new RegExp(target.value, 'gi');
+        const cityName = place.city.replace(regex, `<span class="h1">${target.value}</span>`);
+        const stateName = place.state.replace(regex, `<span class="h1">${target.value}</span>`);
+
         return `
           <li>
-            <span class="name">${place.city}, ${place.state}</span>
+            <span class="name">${cityName}, ${stateName}</span>
             <span class="population">${place.population}</span>
           </li>
         `;
