--- a/6-TypeAhead/index.html
+++ b/6-TypeAhead/index.html
@@ -113,7 +113,7 @@
         const regex = new RegExp(wordToMatch, 'gi');
         return place.city.match(regex) || place.state.match(regex);
       });
-    }
+    };
 
     function displayMatches({ target }) {
       const matchArray = findMatches(target.value, cities);
@@ -125,13 +125,17 @@
         return `
           <li>
             <span class="name">${cityName}, ${stateName}</span>
-            <span class="population">${place.population}</span>
+            <span class="population">${numberWithCommas(place.population)}</span>
           </li>
         `;
       }).join('');
 
       suggestions.innerHTML = html;
-    }
+    };
+
+    function numberWithCommas(x) {
+      return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+    };
   </script>
 
 </body>
