--- a/30-Whack A Mole/index.html
+++ b/30-Whack A Mole/index.html
@@ -112,9 +112,24 @@ h1 {
         const holes = document.querySelectorAll('.hole');
         const scoreBoard = document.querySelector('.score');
         const moles = document.querySelectorAll('.mole');
+        let lastHole;
 
         function randomTime(min, max) {
           return Math.round(Math.random() * (max - min) + min);
+        }
+
+        function randomHole(holes) {
+          const idx = Math.floor(Math.random() * holes.length);
+          const hole = holes[idx];
+
+          if (hole === lastHole) {
+            console.log('Nahh same again');
+            return randomHole(holes);
+          }
+
+
+          lastHole = hole;
+          return hole;
         }
 
     </script>
