--- a/30-Whack A Mole/index.html
+++ b/30-Whack A Mole/index.html
@@ -113,6 +113,7 @@ h1 {
         const scoreBoard = document.querySelector('.score');
         const moles = document.querySelectorAll('.mole');
         let lastHole;
+        let timeUp = false;
 
         function randomTime(min, max) {
           return Math.round(Math.random() * (max - min) + min);
@@ -127,10 +128,21 @@ h1 {
             return randomHole(holes);
           }
 
+            lastHole = hole;
+            return hole;
+          }
 
-          lastHole = hole;
-          return hole;
-        }
+          function peep() {
+            const time = randomTime(200, 1000);
+            const hole = randomHole(holes);
+
+            hole.classList.add('up');
+
+            setTimeout(() => {
+              hole.classList.remove('up');
+              timeUp && peep();
+            }, time);
+          }
 
     </script>
 </body>
