--- a/30-Whack A Mole/index.html
+++ b/30-Whack A Mole/index.html
@@ -114,6 +114,7 @@ h1 {
         const moles = document.querySelectorAll('.mole');
         let lastHole;
         let timeUp = false;
+        let score = 0;
 
         function randomTime(min, max) {
           return Math.round(Math.random() * (max - min) + min);
@@ -150,6 +151,16 @@ h1 {
             peep();
             setTimeout(() => timeUp = true, 10000);
           }
+
+          function bonk({ isTrusted}) {
+            if (!isTrusted) return;
+
+            score++;
+            this.classList.remove('up');
+            scoreBoard.textContent = score;
+          }
+
+          moles.forEach(mole => mole.addEventListener('click', bonk));
 
 
 
