--- a/4-Array1/index.html
+++ b/4-Array1/index.html
@@ -36,6 +36,8 @@
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    const fullNames = inventors.map(i => `${i.first} ${i.last}`);
+    console.table(fullNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
