--- a/4-Array1/index.html
+++ b/4-Array1/index.html
@@ -46,6 +46,8 @@
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const totalYears = inventors.reduce((total,i) => total + (i.passed - i.year), 0);
+    console.log(totalYears);
 
     // 5. Sort the inventors by years lived
 
