--- a/4-Array1/index.html
+++ b/4-Array1/index.html
@@ -60,16 +60,19 @@
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-    const category = document.querySelector('.mw-category');
-    const links = [...category.querySelectorAll('a')];
-
-    const de = links
-      .map(link => link.text)
-      .filter(streetName => streetName.includes('de'));
+    // const category = document.querySelector('.mw-category');
+    // const links = [...category.querySelectorAll('a')];
+    //
+    // const de = links
+    //   .map(link => link.text)
+    //   .filter(streetName => streetName.includes('de'));
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const alpha = people.sort((last, next) => {
+      console.log(last);
+    })
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
