--- a/4-Array1/index.html
+++ b/4-Array1/index.html
@@ -85,6 +85,17 @@
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    const transportation = data.reduce((obj, item) => {
+      if (!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item] += 1;
+
+      return obj
+    }, {});
+
+    console.table(transportation);
+
   </script>
 </body>
 </html>
