--- a/4-Array/index.html
+++ b/4-Array/index.html
@@ -115,6 +115,14 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const isAdult = friends.some(friend => {
+      const currentYear = (new Date()).getFullYear();
+      if (currentYear - friend.year >= 19) {
+        return true;
+      }
+    });
+
+    console.log({isAdult});
     // Array.prototype.every() // is everyone 19 or older?
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
