--- a/4-Array/index.html
+++ b/4-Array/index.html
@@ -124,6 +124,9 @@
 
     console.log({isAdult});
     // Array.prototype.every() // is everyone 19 or older?
+    const allAdults = friends.every(friend => (new Date()).getFullYear() - friend.year >= 19);
+
+    console.log({allAdults});
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
