--- a/4-Array/index.html
+++ b/4-Array/index.html
@@ -130,8 +130,13 @@
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const ID823423 = comments.find(c => c.id === 823423);
+
+    console.log(ID823423);
     // Array.prototype.findIndex()
     // Find the comment with this ID
+    const index = comments.findIndex(c => c.id === 823423);
+    console.log(index);
     // delete the comment with the ID of 823423
 
   </script>
