--- a/4-Array/index.html
+++ b/4-Array/index.html
@@ -138,6 +138,11 @@
     const index = comments.findIndex(c => c.id === 823423);
     console.log(index);
     // delete the comment with the ID of 823423
+    const newComments = [
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1),
+    ];
+    console.table(newComments);
 
   </script>
 </body>
