'Set isDrawing var'

--- a/8-Canvas/index.html
+++ b/8-Canvas/index.html
@@ -11,6 +11,11 @@
   const ctx = canvas.getContext('2d');
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
+  ctx.strokeStyle = 'tomato';
+  ctx.lineJoin = 'round';
+  ctx.lineCap = 'round';
+
+  let isDrawing = false;
 
 </script>
 
