--- a/8-Canvas/index.html
+++ b/8-Canvas/index.html
@@ -20,8 +20,12 @@
   let lastY = 0;
 
   canvas.addEventListener('mousemove', draw);
+  canvas.addEventListener('mousedown', () => isDrawing = true);
+  canvas.addEventListener('mouseup', () => isDrawing = false);
 
   function draw(e) {
+    if (!isDrawing) return;
+
     console.log(e);
   }
 
