--- a/8-Canvas/index.html
+++ b/8-Canvas/index.html
@@ -22,11 +22,15 @@
   canvas.addEventListener('mousemove', draw);
   canvas.addEventListener('mousedown', () => isDrawing = true);
   canvas.addEventListener('mouseup', () => isDrawing = false);
+  canvas.addEventListener('mouseout', () => isDrawing = false);
 
   function draw(e) {
     if (!isDrawing) return;
 
-    console.log(e);
+    ctx.beginPath();
+    ctx.moveTo(lastX, lastY);
+    ctx.lineTo(e.offsetX, e.offsetY);
+    ctx.stroke();
   }
 
 </script>
