'Set lastX and lastY when stop drawing'

--- a/8-Canvas/index.html
+++ b/8-Canvas/index.html
@@ -31,6 +31,8 @@
     ctx.moveTo(lastX, lastY);
     ctx.lineTo(e.offsetX, e.offsetY);
     ctx.stroke();
+
+    [lastX, lastY] = [e.offsetX,e.offsetY];
   }
 
 </script>
