--- a/8-Canvas/index.html
+++ b/8-Canvas/index.html
@@ -20,7 +20,11 @@
   let lastY = 0;
 
   canvas.addEventListener('mousemove', draw);
-  canvas.addEventListener('mousedown', () => isDrawing = true);
+  canvas.addEventListener('mousedown', (e) => {
+    isDrawing = true;
+    [lastX, lastY] = [e.offsetX,e.offsetY];
+
+  });
   canvas.addEventListener('mouseup', () => isDrawing = false);
   canvas.addEventListener('mouseout', () => isDrawing = false);
 
