--- a/8-Canvas/index.html
+++ b/8-Canvas/index.html
@@ -14,6 +14,7 @@
   ctx.strokeStyle = 'tomato';
   ctx.lineJoin = 'round';
   ctx.lineCap = 'round';
+  ctx.lineWidth = '10';
 
   let isDrawing = false;
   let lastX = 0;
