--- a/8-Canvas/index.html
+++ b/8-Canvas/index.html
@@ -19,6 +19,7 @@
   let isDrawing = false;
   let lastX = 0;
   let lastY = 0;
+  let hue = 0;
 
   canvas.addEventListener('mousemove', draw);
   canvas.addEventListener('mousedown', (e) => {
@@ -32,12 +33,14 @@
   function draw(e) {
     if (!isDrawing) return;
 
+    ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
     ctx.beginPath();
     ctx.moveTo(lastX, lastY);
     ctx.lineTo(e.offsetX, e.offsetY);
     ctx.stroke();
 
     [lastX, lastY] = [e.offsetX,e.offsetY];
+    hue++;
   }
 
 </script>
