'ctx.globalCompositeOperation = multiply'

--- a/8-Canvas/index.html
+++ b/8-Canvas/index.html
@@ -14,7 +14,8 @@
   ctx.strokeStyle = 'tomato';
   ctx.lineJoin = 'round';
   ctx.lineCap = 'round';
-  ctx.lineWidth = '10';
+  ctx.lineWidth = 50;
+  ctx.globalCompositeOperation = 'multiply';
 
   let isDrawing = false;
   let lastX = 0;
