'Get the timeNodes'

--- a/18-TallyReduce/index.html
+++ b/18-TallyReduce/index.html
@@ -182,6 +182,8 @@
     </li>
   </ul>
 <script>
+  const timeNodes = [...document.querySelectorAll('[data-time]')];
+  console.table(timeNodes);
 </script>
 </body>
 </html>
