'Get hours, minutes, seconds left'

--- a/18-TallyReduce/index.html
+++ b/18-TallyReduce/index.html
@@ -192,7 +192,14 @@
     })
     .reduce((total, secs) => total + secs, 0);
 
-  console.log(seconds);
+  let secondsLeft = seconds;
+  const hours = Math.floor(secondsLeft / 3600);
+  secondsLeft = secondsLeft % 3600;
+
+  const mins = Math.floor(secondsLeft / 60);
+  secondsLeft = secondsLeft % 60;
+
+  console.log({hours, mins, secondsLeft});
 </script>
 </body>
 </html>
