--- a/1-Drum/index.html
+++ b/1-Drum/index.html
@@ -62,7 +62,7 @@ window.addEventListener('keydown', function(e) {
   const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
   if (!audio) return;
 
-  console.log(audio);
+  audio.play();
 });
 </script>
 
