--- a/1-Drum/index.html
+++ b/1-Drum/index.html
@@ -60,6 +60,9 @@
 <script>
 window.addEventListener('keydown', function(e) {
   const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+  const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+  key.classList.add('playing');
+
   if (!audio) return;
 
   audio.currentTime = 0;
