'Remove .playing on transitionend event'

--- a/1-Drum/index.html
+++ b/1-Drum/index.html
@@ -61,13 +61,22 @@
 window.addEventListener('keydown', function(e) {
   const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
   const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
-  key.classList.add('playing');
+  if (!audio || !key) return;
 
-  if (!audio) return;
+  key.classList.add('playing');
 
   audio.currentTime = 0;
   audio.play();
 });
+
+const keys = document.querySelectorAll('.key');
+keys.forEach(k => k.addEventListener('transitionend', removeTransition));
+
+function removeTransition({ propertyName, target }) {
+  if (propertyName !== 'transform') return;
+
+  target.classList.remove('playing');
+}
 </script>
 
 
