--- a/1-Drum/index.html
+++ b/1-Drum/index.html
@@ -58,19 +58,21 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-window.addEventListener('keydown', function(e) {
-  const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-  const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+window.addEventListener('keydown', playSound);
+
+const keys = document.querySelectorAll('.key');
+keys.forEach(k => k.addEventListener('transitionend', removeTransition));
+
+function playSound({ keyCode }) {
+  const audio = document.querySelector(`audio[data-key="${keyCode}"]`);
+  const key = document.querySelector(`.key[data-key="${keyCode}"]`);
   if (!audio || !key) return;
 
   key.classList.add('playing');
 
   audio.currentTime = 0;
   audio.play();
-});
-
-const keys = document.querySelectorAll('.key');
-keys.forEach(k => k.addEventListener('transitionend', removeTransition));
+}
 
 function removeTransition({ propertyName, target }) {
   if (propertyName !== 'transform') return;
