'Vars with integers and string create a copy not a reference'

--- a/14-ReferenceVsCopy/index.html
+++ b/14-ReferenceVsCopy/index.html
@@ -6,8 +6,14 @@
 </head>
 <body>
 
-  <script>
-  // start with strings, numbers and booleans
+<script>
+// start with strings, numbers and booleans
+let age = 100;
+let age2 = age;
+console.log(age, age2);
+
+age = 200;
+console.log(age, age2);
 
 // Let's say we have an array
 const players = ['Simon', 'Sarah', 'Luba', 'Andy'];
