--- a/14-ReferenceVsCopy/index.html
+++ b/14-ReferenceVsCopy/index.html
@@ -8,37 +8,20 @@
 
 <script>
 // start with strings, numbers and booleans
-let age = 100;
-let age2 = age;
-console.log(age, age2);
-
-age = 200;
-console.log(age, age2);
+// let age = 100;
+// let age2 = age;
+// console.log(age, age2);
+//
+// age = 200;
+// console.log(age, age2);
 
 // Let's say we have an array
 const players = ['Simon', 'Sarah', 'Luba', 'Andy'];
+const team = players;
+console.log(players, team);
 
-// and we want to make a copy of it.
-
-// You might think we can just do something like this:
-
-// however what happens when we update that array?
-
-// now here is the problem!
-
-// oh no - we have edited the original array too!
-
-// Why? It's because that is an array reference, not an array copy. They both point to the same array!
-
-// So, how do we fix this? We take a copy instead!
-
-// one way
-
-// or create a new array and concat the old one in
-
-// or use the new ES6 Spread
-
-// now when we update it, the original one isn't changed
+team[3] = 'Nikky';
+console.log(players, team);
 
 // The same thing goes for objects, let's say we have a person object
 
