--- a/26-FollowAlongDropdown/index.html
+++ b/26-FollowAlongDropdown/index.html
@@ -224,6 +224,10 @@
 const triggers = document.querySelectorAll('.cool > li');
 const background = document.querySelector('.dropdownBackground');
 const nav = document.querySelector('.top');
+
+function handleEnter() {}
+
+function handleLeave() {}
 </script>
 
 </body>
