'Transition dropdown content'

--- a/26-FollowAlongDropdown/index.html
+++ b/26-FollowAlongDropdown/index.html
@@ -225,9 +225,23 @@ const triggers = document.querySelectorAll('.cool > li');
 const background = document.querySelector('.dropdownBackground');
 const nav = document.querySelector('.top');
 
-function handleEnter() {}
+function handleEnter({ target }) {
+  target.classList.add('trigger-enter');
 
-function handleLeave() {}
+  setTimeout(() => target.classList.add('trigger-enter-active'), 150);
+}
+
+function handleLeave({ target }) {
+  target.classList.remove('trigger-enter', 'trigger-enter-active');
+}
+
+triggers.forEach(trigger =>
+  trigger.addEventListener('mouseenter', handleEnter)
+);
+
+triggers.forEach(trigger =>
+  trigger.addEventListener('mouseleave', handleLeave)
+);
 </script>
 
 </body>
