--- a/17-Sorting/index.html
+++ b/17-Sorting/index.html
@@ -59,6 +59,16 @@ const bands = [
   'Anywhere But Here',
   'An Old Dog'
 ];
+
+function strip(bandName) {
+  return bandName.replace(/^(a |an |the|oh,)/i, '').trim();
+}
+const stripedNames = bands.map(strip);
+const sortedBands = stripedNames.sort((a, b) => {
+  return a > b ? 1 : -1;
+});
+
+console.log(sortedBands);
 </script>
 
 </body>
